playground/notas_tests/invalid/chain-01.hulk
function a() => b();
function b() => c();
function c() => innermost;
a();
